# uniplate

./: .ghci  .gitignore  .hlint.yaml  CHANGES.txt  CITATION.cff  ComposPaper.hs  ExprExamples.hs  Main.hs  README.md  boring  performance.txt  play.cabal  play.htm  push.bat  travis.hs  uniplate.cabal  uniplate.htm
.github/workflows/: ci.yml
Benchmark/: Compos.hs  Data.hs  DeriveCompos.hs  DeriveData.hs  DeriveHand.hs  DeriveManual.hs  DeriveTypeable.hs  Generate.hs  Main.hs  Operations.hs  OperationsAll.hs  OperationsCommon.hs  OperationsData.hs  OperationsTypeable.hs  Play.hs  PlaySYB.hs  Raw.hs  SYB.hs  Testset.hs  make.bat  results-ghc6.8.2-list.txt  results.txt
Data/: Play.hs  PlayEx.hs  PlayMPTC.hs  PlayOn.hs  PlaySYB.hs
Data/Generics/: Biplate.hs  Compos.hs  PlateData.hs  PlateDirect.hs  PlateInternal.hs  PlateTypeable.hs  Play.hs  PlayData.hs  PlayEx.hs  PlayInternal.hs  PlayMPTC.hs  PlayManual.hs  PlayOn.hs  PlayOverlap.hs  PlaySYB.hs  PlayTypeable.hs  SYB.hs  Str.hs  Uniplate.hs  UniplateOn.hs  UniplateStr.hs  UniplateStrOn.hs
Data/Generics/Uniplate/: Classes.hs  Data.hs  DataOnly.hs  Direct.hs  Operations.hs  Typeable.hs  Zipper.hs
Data/Generics/Uniplate/Data/: Instances.hs
Data/Generics/Uniplate/Internal/: ClassesInc.hs  Data.hs  DataInc.hs  DataOnlyClasses.hs  DataOnlyOperations.hs  OperationsInc.hs  Utils.hs
Examples/: ComposBasic.hs  ComposOverlap.hs  ComposPaper.hs  ComposSYB.hs  Expr.hs  Paper.hs  SYB.hs
Uniplate/: Benchmark.hs  CommonInc.hs  Data.hs  DataOnly.hs  Direct.hs  Fusion.hs  Generate.hs  HSE.hs  Raw.hs  SYB.hs  Slowdown.hs  Test.hs  Testset.hs  Timer.hs  Type.hs  Typeable.hs
Uniplate/Benchmark/: DeriveData.hs  DeriveManual.hs  DeriveTypeable.hs  OperationsAll.hs  OperationsCommon.hs  OperationsData.hs  OperationsTypeable.hs
Uniplate/BenchmarkOld/: DeriveCompos.hs  DeriveHand.hs  Generate.hs  Main.hs  Operations.hs  OperationsManual.hs  Testset.hs  make.bat  results-ghc6.8.2-str.txt
Uniplate/Examples/: ComposBasic.hs  ComposOverlap.hs  Paper.hs
academic/hw2007/: Include.hs  make.bat  play.bib  play.fmt  play.tex  sigplanconf.cls
academic/hw2007/img/: graph.xls
academic/hw2007/lexemes/: lexcount.hs  syb.txt  uni.txt
hw2007/: graph.ps  play.bib  play.fmt  play.tex
hw2007/img/: graph.xls
hw2007/lexemes/: comp.txt
presentation/: plasma-jan07.ppt
