Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               uniplate
Version:            1.3
Copyright:          2006-9, Neil Mitchell
Maintainer:         ndmitchell@gmail.com
Homepage:           http://community.haskell.org/~ndm/uniplate/
License:            BSD3
License-File:       LICENSE
Author:             Neil Mitchell
Synopsis:           Uniform type generic traversals.
Description:
    Uniplate is a simple and concise generics library, which aims to eliminate
    boilerplate code. It has similar goals to the original Scrap Your Boilerplate
    work but is substantially simpler.
Category:           Development

Extra-Source-Files:
    uniplate.htm
    Data/Generics/Uniplate/Internal/DataInc.hs
    Data/Generics/Uniplate/Internal/OperationsInc.hs

Flag ghc_6_10

Library
    if flag(ghc_6_10)
        build-depends: base == 4.*, mtl, containers, syb
    else
        build-depends: base == 3.*, mtl, containers

    Exposed-modules:
        Data.Generics.Str
        Data.Generics.Compos
        Data.Generics.SYB
        Data.Generics.Uniplate.Operations
        Data.Generics.Uniplate.Direct
        Data.Generics.Uniplate.Typeable
        Data.Generics.Uniplate.Data
        Data.Generics.Uniplate.DataOnly

        -- DEPRECATED
        Data.Generics.Uniplate
        Data.Generics.UniplateOn
        Data.Generics.UniplateStr
        Data.Generics.UniplateStrOn
        Data.Generics.Biplate
        Data.Generics.PlateDirect
        Data.Generics.PlateTypeable
        Data.Generics.PlateData
        Data.Generics.PlateInternal

    Other-modules:
        Data.Generics.Uniplate.Internal.Data
        Data.Generics.Uniplate.Internal.DataOnlyOperations
        Data.Generics.Uniplate.Internal.Utils
