Cabal-Version:      >= 1.2
Build-Type:         Simple
Name:               uniplate
Version:            1.6
Copyright:          2006-10, Neil Mitchell
Maintainer:         ndmitchell@gmail.com
Homepage:           http://community.haskell.org/~ndm/uniplate/
License:            BSD3
License-File:       LICENSE
Author:             Neil Mitchell
Synopsis:           Help writing simple, concise and fast generic operations.
Category:           Generics
Description:
    Uniplate is library for writing simple and concise generic operations.
    Uniplate has similar goals to the original Scrap Your Boilerplate work,
    but is substantially simpler and faster.
    .
    To get started with Uniplate you should import one of the three following
    modules:
    .
    * "Data.Generics.Uniplate.Data" - to quickly start writing generic functions.
    Most users should start by importing this module.
    .
    * "Data.Generics.Uniplate.Direct" - a replacement for "Data.Generics.Uniplate.Data"
    with substantially higher performance (around 5 times), but requires writing
    instance declarations.
    .
    * "Data.Generics.Uniplate.Operations" - definitions of all the operations defined
    by Uniplate. Both the above two modules re-export this module.
    .
    In addition, some users may want to make use of the following modules:
    .
    * "Data.Generics.Uniplate.Zipper" - a zipper built on top of Uniplate instances.
    .
    * "Data.Generics.SYB" - users transitioning from the Scrap Your Boilerplate library.
    .
    * "Data.Generics.Compos" - users transitioning from the Compos library.
    .
    * "Data.Generics.Uniplate.DataOnly" - users making use of both @Data@ and @Direct@
    to avoid getting instance conflicts.

Extra-Source-Files:
    uniplate.htm
    Data/Generics/Uniplate/Internal/DataInc.hs
    Data/Generics/Uniplate/Internal/OperationsInc.hs

Flag ghc_6_10

Library
    if flag(ghc_6_10)
        build-depends: base >=4 && <5, containers, syb
    else
        build-depends: base >=3 && <4, containers

    Exposed-modules:
        Data.Generics.Str
        Data.Generics.Compos
        Data.Generics.SYB
        Data.Generics.Uniplate.Data
        Data.Generics.Uniplate.DataOnly
        Data.Generics.Uniplate.Direct
        Data.Generics.Uniplate.Operations
        Data.Generics.Uniplate.Typeable
        Data.Generics.Uniplate.Zipper

        -- DEPRECATED
        Data.Generics.Uniplate
        Data.Generics.UniplateOn
        Data.Generics.UniplateStr
        Data.Generics.UniplateStrOn
        Data.Generics.Biplate
        Data.Generics.PlateDirect
        Data.Generics.PlateTypeable
        Data.Generics.PlateData

    Other-modules:
        Data.Generics.PlateInternal
        Data.Generics.Uniplate.Internal.Data
        Data.Generics.Uniplate.Internal.DataOnlyOperations
        Data.Generics.Uniplate.Internal.Utils

    Extensions: CPP
